<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivMoviePhoto"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivMoviePhoto"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/movie_name" />

        <TextView
            android:id="@+id/tvMovieTopCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMovieName"
            android:layout_marginTop="16dp"
            tools:text="@string/movie_top_cast" />

        <TextView
            android:id="@+id/tvMovieReleaseDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMovieTopCast"
            android:layout_marginTop="26dp"
            android:text="@string/movie_release_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMovieReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvMovieReleaseDateLabel"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@+id/tvMovieReleaseDateLabel"
            android:layout_toRightOf="@+id/tvMovieReleaseDateLabel"
            tools:text="@string/movie_release_date_value" />

        <TextView
            android:id="@+id/tvMovieDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMovieReleaseDateLabel"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            tools:text="@string/movie_description" />
    </RelativeLayout>
</ScrollView>